--- a/approach.html
+++ b/approach.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head class="no-js">
     <meta charset="UTF-8">
-    <title>Valtira | Blog</title>
+    <title>Valtira | Approach</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">    <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -64,7 +64,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="content-blocks inner-header-blocks">
-                        <h2>blog page</h2>
+                        <h2>Approach page</h2>
                         <div class="grn-underline"></div>
                         <p>Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
                     </div>
@@ -77,7 +77,6 @@
 
 <!-- main content blocks -->
 <div class="lazyView" style="visibility: hidden">
-
 <a name="next"></a>
 
     <div class="container">
