--- a/careers.html
+++ b/careers.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head class="no-js">
     <meta charset="UTF-8">
-    <title>Valtira | Blog</title>
+    <title>Valtira | Careers</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">    <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -11,9 +11,6 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel='stylesheet' type="text/css" href="css/animations.css" />
-    <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 </head>
 <body>
 
@@ -23,7 +20,7 @@
     <ul>
         <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" class="active">About</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="index.html">Home</a></li>
@@ -58,13 +55,13 @@
 
 <!-- header -->
 
-<header class="servicesHeader2">
+<header class="aboutHeader">
     <div class="jumboOverlay">
         <main class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="content-blocks inner-header-blocks">
-                        <h2>blog page</h2>
+                        <h2>career page</h2>
                         <div class="grn-underline"></div>
                         <p>Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
                     </div>
@@ -97,10 +94,12 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6"><img src="img/su2.jpg" class="left-offset" /></div>
-            <div class="col-md-6"><img src="img/su3.jpg" class="right-offset" /></div>
+            <div class="col-md-12">
+                <img src="img/su1.jpg" alt="su1jpg" class="fullWidthImage mobilize" />
+            </div>
         </div>
     </div>
+    <br/>
 
 <!-- main content blocks -->
 
@@ -117,7 +116,7 @@
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-                <img src="img/su3.jpg" class="negativeLeftImage mobilize" width="550px" align="left"/>
+                <img src="img/su3.jpg" class="negativeLeftImage mobilize" width="600px" align="left"/>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,  sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -125,18 +124,16 @@
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit.
                 labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum.</p>
+                quis.</p><br/>
 
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit.
                 labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p><br/>
 
-                <img src="img/su4.jpg" class="negativeRightImage mobilize" width="550px" align="right"/>
+                <img src="img/su4.jpg" class="negativeRightImage mobilize" width="600px" align="right"/>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,  sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -298,7 +295,7 @@
                 $(".pop-up-contact-div").show();
             });
         });
-                $('.lazyView').lazyView();
+                    $('.lazyView').lazyView();
 
     });
 
