--- a/s-work.html
+++ b/s-work.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head class="no-js">
     <meta charset="UTF-8">
-    <title>Valtira | Blog</title>
+    <title>Valtira | Single Work</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">    <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -18,12 +18,13 @@
 <body>
 
 <!-- nav -->
+
 <div class="lazyView" style="visibility: hidden">
 <nav class="topNav">
     <ul>
         <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" class="active">About</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="index.html">Home</a></li>
@@ -31,6 +32,7 @@
     </ul>
 </nav>
 </div>
+
 <!-- side popup nav -->
 
 <aside class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right" id="cbp-spmenu-s2">
@@ -58,13 +60,13 @@
 
 <!-- header -->
 
-<header class="servicesHeader2">
+<header class="singleWork">
     <div class="jumboOverlay">
         <main class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="content-blocks inner-header-blocks">
-                        <h2>blog page</h2>
+                        <h2>single work page</h2>
                         <div class="grn-underline"></div>
                         <p>Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
                     </div>
@@ -77,7 +79,6 @@
 
 <!-- main content blocks -->
 <div class="lazyView" style="visibility: hidden">
-
 <a name="next"></a>
 
     <div class="container">
@@ -298,7 +299,7 @@
                 $(".pop-up-contact-div").show();
             });
         });
-                $('.lazyView').lazyView();
+            $('.lazyView').lazyView();
 
     });
 
